parser/flowdsl_parser.go
// Code generated from ./flowDsl.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // flowDsl

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type flowDslParser struct {
	*antlr.BaseParser
}

var FlowDslParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func flowdslParserInit() {
	staticData := &FlowDslParserStaticData
	staticData.LiteralNames = []string{
		"", "", "'import'", "'flow'", "'{'", "", "", "", "", "'->'", "", "':'",
		"", "", "'('", "", "'}'", "", "", "", "", "", "", "')'", "", "", "",
		"", "", "", "'='",
	}
	staticData.SymbolicNames = []string{
		"", "SEMI", "IMPORT", "FLOW", "LBRACE", "ID", "BLOCK_COMMENT", "LINE_COMMENT",
		"WS", "ARROW", "SEMIF", "COLON", "STRING", "PORT", "LPAREN", "LBRACK",
		"RBRACE", "BLOCK_COMMENTF", "LINE_COMMENTF", "WSF", "COMMA", "PIPE",
		"DOTI", "RPAREN", "LBRACKI", "RBRACK", "IDI", "BLOCK_COMMENTI", "LINE_COMMENTI",
		"WSI", "ASSIGN", "COMMAP", "DOTP", "PIPEP", "RBRACKP", "IDP", "BLOCK_COMMENTP",
		"LINE_COMMENTP", "WSP",
	}
	staticData.RuleNames = []string{
		"flowFile", "imports", "flow", "statement", "statementStart", "statementMiddle",
		"statementEnd", "arrowComponent", "component", "componentTypeName",
		"plugin", "pluginPart", "allData", "data", "packageIDI", "packageIDP",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// flowDslParserInit initializes any static state used to implement flowDslParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewflowDslParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func FlowDslParserInit() {
	staticData := &FlowDslParserStaticData
	staticData.once.Do(flowdslParserInit)
}

// NewflowDslParser produces a new parser instance for the optional input antlr.TokenStream.
func NewflowDslParser(input antlr.TokenStream) *flowDslParser {
	FlowDslParserInit()
	this := new(flowDslParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &FlowDslParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "flowDsl.g4"

	return this
}

// flowDslParser tokens.
const (
	flowDslParserEOF            = antlr.TokenEOF
	flowDslParserSEMI           = 1
	flowDslParserIMPORT         = 2
	flowDslParserFLOW           = 3
	flowDslParserLBRACE         = 4
	flowDslParserID             = 5
	flowDslParserBLOCK_COMMENT  = 6
	flowDslParserLINE_COMMENT   = 7
	flowDslParserWS             = 8
	flowDslParserARROW          = 9
	flowDslParserSEMIF          = 10
	flowDslParserCOLON          = 11
	flowDslParserSTRING         = 12
	flowDslParserPORT           = 13
	flowDslParserLPAREN         = 14
	flowDslParserLBRACK         = 15
	flowDslParserRBRACE         = 16
	flowDslParserBLOCK_COMMENTF = 17
	flowDslParserLINE_COMMENTF  = 18
	flowDslParserWSF            = 19
	flowDslParserCOMMA          = 20
	flowDslParserPIPE           = 21
	flowDslParserDOTI           = 22
	flowDslParserRPAREN         = 23
	flowDslParserLBRACKI        = 24
	flowDslParserRBRACK         = 25
	flowDslParserIDI            = 26
	flowDslParserBLOCK_COMMENTI = 27
	flowDslParserLINE_COMMENTI  = 28
	flowDslParserWSI            = 29
	flowDslParserASSIGN         = 30
	flowDslParserCOMMAP         = 31
	flowDslParserDOTP           = 32
	flowDslParserPIPEP          = 33
	flowDslParserRBRACKP        = 34
	flowDslParserIDP            = 35
	flowDslParserBLOCK_COMMENTP = 36
	flowDslParserLINE_COMMENTP  = 37
	flowDslParserWSP            = 38
)

// flowDslParser rules.
const (
	flowDslParserRULE_flowFile          = 0
	flowDslParserRULE_imports           = 1
	flowDslParserRULE_flow              = 2
	flowDslParserRULE_statement         = 3
	flowDslParserRULE_statementStart    = 4
	flowDslParserRULE_statementMiddle   = 5
	flowDslParserRULE_statementEnd      = 6
	flowDslParserRULE_arrowComponent    = 7
	flowDslParserRULE_component         = 8
	flowDslParserRULE_componentTypeName = 9
	flowDslParserRULE_plugin            = 10
	flowDslParserRULE_pluginPart        = 11
	flowDslParserRULE_allData           = 12
	flowDslParserRULE_data              = 13
	flowDslParserRULE_packageIDI        = 14
	flowDslParserRULE_packageIDP        = 15
)

// IFlowFileContext is an interface to support dynamic dispatch.
type IFlowFileContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetAllImports returns the AllImports rule contexts.
	GetAllImports() IImportsContext

	// Get_flow returns the _flow rule contexts.
	Get_flow() IFlowContext

	// SetAllImports sets the AllImports rule contexts.
	SetAllImports(IImportsContext)

	// Set_flow sets the _flow rule contexts.
	Set_flow(IFlowContext)

	// GetFlows returns the Flows rule context list.
	GetFlows() []IFlowContext

	// SetFlows sets the Flows rule context list.
	SetFlows([]IFlowContext)

	// Getter signatures
	EOF() antlr.TerminalNode
	Imports() IImportsContext
	AllFlow() []IFlowContext
	Flow(i int) IFlowContext

	// IsFlowFileContext differentiates from other interfaces.
	IsFlowFileContext()
}

type FlowFileContext struct {
	antlr.BaseParserRuleContext
	parser     antlr.Parser
	AllImports IImportsContext
	_flow      IFlowContext
	Flows      []IFlowContext
}

func NewEmptyFlowFileContext() *FlowFileContext {
	var p = new(FlowFileContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = flowDslParserRULE_flowFile
	return p
}

func InitEmptyFlowFileContext(p *FlowFileContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = flowDslParserRULE_flowFile
}

func (*FlowFileContext) IsFlowFileContext() {}

func NewFlowFileContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FlowFileContext {
	var p = new(FlowFileContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = flowDslParserRULE_flowFile

	return p
}

func (s *FlowFileContext) GetParser() antlr.Parser { return s.parser }

func (s *FlowFileContext) GetAllImports() IImportsContext { return s.AllImports }

func (s *FlowFileContext) Get_flow() IFlowContext { return s._flow }

func (s *FlowFileContext) SetAllImports(v IImportsContext) { s.AllImports = v }

func (s *FlowFileContext) Set_flow(v IFlowContext) { s._flow = v }

func (s *FlowFileContext) GetFlows() []IFlowContext { return s.Flows }

func (s *FlowFileContext) SetFlows(v []IFlowContext) { s.Flows = v }

func (s *FlowFileContext) EOF() antlr.TerminalNode {
	return s.GetToken(flowDslParserEOF, 0)
}

func (s *FlowFileContext) Imports() IImportsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IImportsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IImportsContext)
}

func (s *FlowFileContext) AllFlow() []IFlowContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IFlowContext); ok {
			len++
		}
	}

	tst := make([]IFlowContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IFlowContext); ok {
			tst[i] = t.(IFlowContext)
			i++
		}
	}

	return tst
}

func (s *FlowFileContext) Flow(i int) IFlowContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFlowContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFlowContext)
}

func (s *FlowFileContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FlowFileContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *flowDslParser) FlowFile() (localctx IFlowFileContext) {
	localctx = NewFlowFileContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, flowDslParserRULE_flowFile)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(33)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == flowDslParserIMPORT {
		{
			p.SetState(32)

			var _x = p.Imports()

			localctx.(*FlowFileContext).AllImports = _x
		}

	}
	p.SetState(36)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == flowDslParserFLOW {
		{
			p.SetState(35)

			var _x = p.Flow()

			localctx.(*FlowFileContext)._flow = _x
		}
		localctx.(*FlowFileContext).Flows = append(localctx.(*FlowFileContext).Flows, localctx.(*FlowFileContext)._flow)

		p.SetState(38)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(40)
		p.Match(flowDslParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IImportsContext is an interface to support dynamic dispatch.
type IImportsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Get_STRING returns the _STRING token.
	Get_STRING() antlr.Token

	// Set_STRING sets the _STRING token.
	Set_STRING(antlr.Token)

	// GetImports returns the Imports token list.
	GetImports() []antlr.Token

	// SetImports sets the Imports token list.
	SetImports([]antlr.Token)

	// Getter signatures
	IMPORT() antlr.TerminalNode
	LBRACE() antlr.TerminalNode
	RBRACE() antlr.TerminalNode
	AllSEMI() []antlr.TerminalNode
	SEMI(i int) antlr.TerminalNode
	AllSTRING() []antlr.TerminalNode
	STRING(i int) antlr.TerminalNode

	// IsImportsContext differentiates from other interfaces.
	IsImportsContext()
}

type ImportsContext struct {
	antlr.BaseParserRuleContext
	parser  antlr.Parser
	_STRING antlr.Token
	Imports []antlr.Token
}

func NewEmptyImportsContext() *ImportsContext {
	var p = new(ImportsContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = flowDslParserRULE_imports
	return p
}

func InitEmptyImportsContext(p *ImportsContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = flowDslParserRULE_imports
}

func (*ImportsContext) IsImportsContext() {}

func NewImportsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ImportsContext {
	var p = new(ImportsContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = flowDslParserRULE_imports

	return p
}

func (s *ImportsContext) GetParser() antlr.Parser { return s.parser }

func (s *ImportsContext) Get_STRING() antlr.Token { return s._STRING }

func (s *ImportsContext) Set_STRING(v antlr.Token) { s._STRING = v }

func (s *ImportsContext) GetImports() []antlr.Token { return s.Imports }

func (s *ImportsContext) SetImports(v []antlr.Token) { s.Imports = v }

func (s *ImportsContext) IMPORT() antlr.TerminalNode {
	return s.GetToken(flowDslParserIMPORT, 0)
}

func (s *ImportsContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(flowDslParserLBRACE, 0)
}

func (s *ImportsContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(flowDslParserRBRACE, 0)
}

func (s *ImportsContext) AllSEMI() []antlr.TerminalNode {
	return s.GetTokens(flowDslParserSEMI)
}

func (s *ImportsContext) SEMI(i int) antlr.TerminalNode {
	return s.GetToken(flowDslParserSEMI, i)
}

func (s *ImportsContext) AllSTRING() []antlr.TerminalNode {
	return s.GetTokens(flowDslParserSTRING)
}

func (s *ImportsContext) STRING(i int) antlr.TerminalNode {
	return s.GetToken(flowDslParserSTRING, i)
}

func (s *ImportsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ImportsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *flowDslParser) Imports() (localctx IImportsContext) {
	localctx = NewImportsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, flowDslParserRULE_imports)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(42)
		p.Match(flowDslParserIMPORT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(43)
		p.Match(flowDslParserLBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(46)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == flowDslParserSTRING {
		{
			p.SetState(44)

			var _m = p.Match(flowDslParserSTRING)

			localctx.(*ImportsContext)._STRING = _m
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		localctx.(*ImportsContext).Imports = append(localctx.(*ImportsContext).Imports, localctx.(*ImportsContext)._STRING)
		{
			p.SetState(45)
			p.Match(flowDslParserSEMI)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

		p.SetState(48)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(50)
		p.Match(flowDslParserRBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IFlowContext is an interface to support dynamic dispatch.
type IFlowContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetName returns the Name token.
	GetName() antlr.Token

	// SetName sets the Name token.
	SetName(antlr.Token)

	// Get_statement returns the _statement rule contexts.
	Get_statement() IStatementContext

	// Set_statement sets the _statement rule contexts.
	Set_statement(IStatementContext)

	// GetStatements returns the Statements rule context list.
	GetStatements() []IStatementContext

	// SetStatements sets the Statements rule context list.
	SetStatements([]IStatementContext)

	// Getter signatures
	FLOW() antlr.TerminalNode
	LBRACE() antlr.TerminalNode
	RBRACE() antlr.TerminalNode
	ID() antlr.TerminalNode
	AllStatement() []IStatementContext
	Statement(i int) IStatementContext

	// IsFlowContext differentiates from other interfaces.
	IsFlowContext()
}

type FlowContext struct {
	antlr.BaseParserRuleContext
	parser     antlr.Parser
	Name       antlr.Token
	_statement IStatementContext
	Statements []IStatementContext
}

func NewEmptyFlowContext() *FlowContext {
	var p = new(FlowContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = flowDslParserRULE_flow
	return p
}

func InitEmptyFlowContext(p *FlowContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = flowDslParserRULE_flow
}

func (*FlowContext) IsFlowContext() {}

func NewFlowContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FlowContext {
	var p = new(FlowContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = flowDslParserRULE_flow

	return p
}

func (s *FlowContext) GetParser() antlr.Parser { return s.parser }

func (s *FlowContext) GetName() antlr.Token { return s.Name }

func (s *FlowContext) SetName(v antlr.Token) { s.Name = v }

func (s *FlowContext) Get_statement() IStatementContext { return s._statement }

func (s *FlowContext) Set_statement(v IStatementContext) { s._statement = v }

func (s *FlowContext) GetStatements() []IStatementContext { return s.Statements }

func (s *FlowContext) SetStatements(v []IStatementContext) { s.Statements = v }

func (s *FlowContext) FLOW() antlr.TerminalNode {
	return s.GetToken(flowDslParserFLOW, 0)
}

func (s *FlowContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(flowDslParserLBRACE, 0)
}

func (s *FlowContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(flowDslParserRBRACE, 0)
}

func (s *FlowContext) ID() antlr.TerminalNode {
	return s.GetToken(flowDslParserID, 0)
}

func (s *FlowContext) AllStatement() []IStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStatementContext); ok {
			len++
		}
	}

	tst := make([]IStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStatementContext); ok {
			tst[i] = t.(IStatementContext)
			i++
		}
	}

	return tst
}

func (s *FlowContext) Statement(i int) IStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *FlowContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FlowContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *flowDslParser) Flow() (localctx IFlowContext) {
	localctx = NewFlowContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, flowDslParserRULE_flow)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(52)
		p.Match(flowDslParserFLOW)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(53)

		var _m = p.Match(flowDslParserID)

		localctx.(*FlowContext).Name = _m
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(54)
		p.Match(flowDslParserLBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(56)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == flowDslParserPORT || _la == flowDslParserLBRACK {
		{
			p.SetState(55)

			var _x = p.Statement()

			localctx.(*FlowContext)._statement = _x
		}
		localctx.(*FlowContext).Statements = append(localctx.(*FlowContext).Statements, localctx.(*FlowContext)._statement)

		p.SetState(58)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(60)
		p.Match(flowDslParserRBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	StatementMiddle() IStatementMiddleContext
	SEMIF() antlr.TerminalNode
	StatementStart() IStatementStartContext
	StatementEnd() IStatementEndContext

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = flowDslParserRULE_statement
	return p
}

func InitEmptyStatementContext(p *StatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = flowDslParserRULE_statement
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = flowDslParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) StatementMiddle() IStatementMiddleContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatementMiddleContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatementMiddleContext)
}

func (s *StatementContext) SEMIF() antlr.TerminalNode {
	return s.GetToken(flowDslParserSEMIF, 0)
}

func (s *StatementContext) StatementStart() IStatementStartContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatementStartContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatementStartContext)
}

func (s *StatementContext) StatementEnd() IStatementEndContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatementEndContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatementEndContext)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *flowDslParser) Statement() (localctx IStatementContext) {
	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, flowDslParserRULE_statement)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(63)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == flowDslParserPORT {
		{
			p.SetState(62)
			p.StatementStart()
		}

	}
	{
		p.SetState(65)
		p.StatementMiddle()
	}
	p.SetState(67)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&25088) != 0 {
		{
			p.SetState(66)
			p.StatementEnd()
		}

	}
	{
		p.SetState(69)
		p.Match(flowDslParserSEMIF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IStatementStartContext is an interface to support dynamic dispatch.
type IStatementStartContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetStartPort returns the StartPort token.
	GetStartPort() antlr.Token

	// GetDstPort returns the DstPort token.
	GetDstPort() antlr.Token

	// SetStartPort sets the StartPort token.
	SetStartPort(antlr.Token)

	// SetDstPort sets the DstPort token.
	SetDstPort(antlr.Token)

	// GetAllArrData returns the AllArrData rule contexts.
	GetAllArrData() IAllDataContext

	// SetAllArrData sets the AllArrData rule contexts.
	SetAllArrData(IAllDataContext)

	// Getter signatures
	ARROW() antlr.TerminalNode
	AllPORT() []antlr.TerminalNode
	PORT(i int) antlr.TerminalNode
	AllData() IAllDataContext

	// IsStatementStartContext differentiates from other interfaces.
	IsStatementStartContext()
}

type StatementStartContext struct {
	antlr.BaseParserRuleContext
	parser     antlr.Parser
	StartPort  antlr.Token
	AllArrData IAllDataContext
	DstPort    antlr.Token
}

func NewEmptyStatementStartContext() *StatementStartContext {
	var p = new(StatementStartContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = flowDslParserRULE_statementStart
	return p
}

func InitEmptyStatementStartContext(p *StatementStartContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = flowDslParserRULE_statementStart
}

func (*StatementStartContext) IsStatementStartContext() {}

func NewStatementStartContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementStartContext {
	var p = new(StatementStartContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = flowDslParserRULE_statementStart

	return p
}

func (s *StatementStartContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementStartContext) GetStartPort() antlr.Token { return s.StartPort }

func (s *StatementStartContext) GetDstPort() antlr.Token { return s.DstPort }

func (s *StatementStartContext) SetStartPort(v antlr.Token) { s.StartPort = v }

func (s *StatementStartContext) SetDstPort(v antlr.Token) { s.DstPort = v }

func (s *StatementStartContext) GetAllArrData() IAllDataContext { return s.AllArrData }

func (s *StatementStartContext) SetAllArrData(v IAllDataContext) { s.AllArrData = v }

func (s *StatementStartContext) ARROW() antlr.TerminalNode {
	return s.GetToken(flowDslParserARROW, 0)
}

func (s *StatementStartContext) AllPORT() []antlr.TerminalNode {
	return s.GetTokens(flowDslParserPORT)
}

func (s *StatementStartContext) PORT(i int) antlr.TerminalNode {
	return s.GetToken(flowDslParserPORT, i)
}

func (s *StatementStartContext) AllData() IAllDataContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAllDataContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAllDataContext)
}

func (s *StatementStartContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementStartContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *flowDslParser) StatementStart() (localctx IStatementStartContext) {
	localctx = NewStatementStartContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, flowDslParserRULE_statementStart)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(71)

		var _m = p.Match(flowDslParserPORT)

		localctx.(*StatementStartContext).StartPort = _m
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(72)

		var _x = p.AllData()

		localctx.(*StatementStartContext).AllArrData = _x
	}
	{
		p.SetState(73)
		p.Match(flowDslParserARROW)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(75)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == flowDslParserPORT {
		{
			p.SetState(74)

			var _m = p.Match(flowDslParserPORT)

			localctx.(*StatementStartContext).DstPort = _m
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IStatementMiddleContext is an interface to support dynamic dispatch.
type IStatementMiddleContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetFirstComponent returns the FirstComponent rule contexts.
	GetFirstComponent() IComponentContext

	// Get_arrowComponent returns the _arrowComponent rule contexts.
	Get_arrowComponent() IArrowComponentContext
